--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="headernav">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="index.html"><img src="AMlogo.png" alt="LOGO"></a>
+                  <a class="navbar-brand" href="index.html"><img src="AMLogo.png" alt="LOGO"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -87,11 +87,11 @@
               <p class="col-md-4 mb-0 text-muted">&copy; Aleksi Mäyry</p>
           
               <a href="index.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-                <img src="hamsterlogo.png" alt="logo" class="bi me-2" width="40" height="40">
+                <img src="AMLogo.png" alt="logo" class="bi me-2" width="40" height="40">
               </a>
           
               <ul class="nav col-md-4 justify-content-end">
-                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Koti</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
                 <li class="nav-item"><a href="hamstereista.html" class="nav-link px-2 text-muted">Tietoa</a></li>
                 <li class="nav-item"><a href="omahamst.html" class="nav-link px-2 text-muted">Oma hamsterini</a></li>
                 <li class="nav-item"><a href="hoito.html" class="nav-link px-2 text-muted">Hoito</a></li>
