--- a/omahamst.html
+++ b/omahamst.html
@@ -65,11 +65,11 @@
             <p class="col-md-4 mb-0 text-muted">&copy; Aleksi Mäyry</p>
         
             <a href="index.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-              <img src="hamsterlogo.png" alt="logo" class="bi me-2" width="40" height="40">
+              <img src="AMLogo.png" alt="logo" class="bi me-2" width="40" height="40">
             </a>
         
             <ul class="nav col-md-4 justify-content-end">
-              <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Koti</a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
               <li class="nav-item"><a href="hamstereista.html" class="nav-link px-2 text-muted">Tietoa</a></li>
               <li class="nav-item"><a href="omahamst.html" class="nav-link px-2 text-muted">Oma hamsterini</a></li>
               <li class="nav-item"><a href="hoito.html" class="nav-link px-2 text-muted">Hoito</a></li>
