Name changes to links

--- a/hoito.html
+++ b/hoito.html
@@ -11,7 +11,7 @@
         <header class="headernav">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="index.html"><img src="AMLogo.png" alt="logo"></a>
+                  <a class="navbar-brand" href="index.html"><img src="img/AMLogo.png" alt="logo"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -21,10 +21,10 @@
                         <a class="nav-link" href="index.html">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="hamstereista.html">Tietoa hamstereista</a>
+                        <a class="nav-link" href="about.html">About</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="omahamst.html">Oma hamsterini</a>
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="hoito.html">Hoito</a>
@@ -67,13 +67,13 @@
             <p class="col-md-4 mb-0 text-muted">&copy; Aleksi Mäyry</p>
         
             <a href="index.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-              <img src="AMLogo.png" alt="logo" class="bi me-2" width="40" height="40">
+              <img src="img/AMLogo.png" alt="logo" class="bi me-2" width="40" height="40">
             </a>
         
             <ul class="nav col-md-4 justify-content-end">
               <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
-              <li class="nav-item"><a href="hamstereista.html" class="nav-link px-2 text-muted">Tietoa</a></li>
-              <li class="nav-item"><a href="omahamst.html" class="nav-link px-2 text-muted">Oma hamsterini</a></li>
+              <li class="nav-item"><a href="about.html" class="nav-link px-2 text-muted">About</a></li>
+              <li class="nav-item"><a href="portfolio.html" class="nav-link px-2 text-muted">Portfolio</a></li>
               <li class="nav-item"><a href="hoito.html" class="nav-link px-2 text-muted">Hoito</a></li>
             </ul>
           </footer>
