--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="hoito.html">Hoito</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                       </li>
                     </ul>
                   </div>
@@ -94,7 +94,7 @@
                 <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link px-2 text-muted">About</a></li>
                 <li class="nav-item"><a href="portfolio.html" class="nav-link px-2 text-muted">Portfolio</a></li>
-                <li class="nav-item"><a href="hoito.html" class="nav-link px-2 text-muted">Hoito</a></li>
+                <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
               </ul>
             </footer>
           </div>
